--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     </div>
 
 
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://dimplejs.org/dist/dimple.v1.1.3.min.js"></script>
+    <script src="https://d3js.org/d3.v3.min.js"></script>
+    <script src="https://dimplejs.org/dist/dimple.v1.1.3.min.js"></script>
     <script src="js/graph-scroll.js"></script>
     <script src="js/stackedBarCharts.js"></script>
     <script src="js/lineSeries.js"></script>
