--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
 
     <!--<script src="https://d3js.org/d3.v3.min.js"></script>-->
     <!--<script src="https://dimplejs.org/dist/dimple.v1.1.3.min.js"></script>-->
-    <script src="js/d3.v3.min.js"></script>
-    <script src="js/dimple.min.js"></script>
-    <script src="js/graph-scroll.js"></script>
+    <script src="js/lib/d3.v3.min.js"></script>
+    <script src="js/lib/dimple.min.js"></script>
+    <script src="js/lib/graph-scroll.js"></script>
     <script src="js/stackedBarCharts.js"></script>
     <script src="js/lineSeries.js"></script>
     <script src="js/statePCBars.js"></script>
