--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
     <div id='container3'>
       <div id='sections3'>
         <div>
-          <h3>US Area Divisions Consumption</h3>
-          According to our 
+          <h3>US Areas Divisions Consumption</h3>
+          According to our data, from 2010 to 2014, more than 50% energy consumption is from West South Central, East North Central and South Atlantic areas.
         </div>
         <div>&nbsp</div>
       </div>
