Add text for State usage

--- a/index.html
+++ b/index.html
@@ -103,25 +103,34 @@
         
         <div>
           <h3>State Usage Component</h3>
-          2010      
+          <h4>2010</h4>
+          <p>The distribution for consumption among the 8 energy source remain similar during the years. An average of 50% of the consumption is fossil fuel. Followed with natural gas and coal.
+          </p>
+
+          <p>The usage of renewable energy (Hydro, Geothermal and Biomass) varies significantly among the states. 
+          </p>
         </div>
 
 
         <div>
-          2011
+          <h4>2011</h4>
+          Similar as 2010...
         </div>
 
 
         <div>
-          2012
+          <h4>2012</h4>
+          Similar as before...
         </div>
 
         <div>
-          2013
+          <h4>2013</h4>
+          Similar as before...
         </div>
 
         <div>
-          2014
+          <h4>2014</h4>
+          Similar as before...
         </div> 
       </div>
       <div id='graph5'></div>
