--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width">
 
   <link href="style/style.css" rel="stylesheet" type="text/css">
-
-  <h1>United States Energy Consumption 2010 to 2014</h1>
+  <head>
+    <title>United States Energy Consumption 2010 to 2014</title>
+  </head>
+  <h1>United States Energy Consumption from 2010 to 2014</h1>
   
   <body>
 
@@ -185,16 +187,61 @@
           <h3>Energy Consumption V.S GDP</h3>
          The consumption decreased first and the increased during the year 2010 to 2014, while the GDP is increasing all the time.     
         </div>
-
       </div>
       <div id='graph7'></div>
     </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <div id="conclusion">
-      <h3>Conclusion</h3>
+      <h2>Conclusion</h2>
       <p>
+        During the year of 2010 to 2014, the data shows a relatively stable total amount of energy consumption in US with a minor decrease and increment back. The usage of renewable energy has a minor increase, but still the main energy source relies on traditional non-renewable energy, such as fossil fuel, coal and natural gas. The increment amount is almost not noticeable compared with the huge amount of usage for non-renewable energy.
+      </p>
+      <p>
+        From 2010 to 2014, more than 50% energy consumption was from West South Central, East North Central and South Atlantic which areas have high population density or highly depend on their industry production.California and Texas have the highest consumption during these years. And Florida, Louisiana and New York also have relatively high demand for energies. 
+      </p>
+      <p>
+        The energy consumption differs largely among different states, depends on their location and industry type structure. This also limits the usages of the type of energy source. However, the change of most of the states during the monitored years is not obvious. Still there are  some states transformed from an energy consumer to a producer during the years. 
+      </p>
+      <p>
+        There is not obvious relationship among energy consumption change rate, population growth rate and GDP change rate. As we expected, the increase of GDP and population may highly increase the need for energy; however, this assumption is not true based on our data. We think that maybe the technology has improved the efficiency of energy usage a lot during this time period and GDP is no longer heavily depend on traditional industries which need a lot energy support.
+      </p>
+      <p>
+
       </p>
     </div>
+    <div id="reference">
+      <h2>Reference</h2>
+      <ul>
+        <li>
+          Data Source: <a href="https://www.kaggle.com/maulberto3/us-product-and-energy-prices/data">https://www.kaggle.com/maulberto3/us-product-and-energy-prices/data</a>
+        </li>
+        <li>
+          Primary Energy: <a href="https://en.wikipedia.org/wiki/Primary_energy">https://en.wikipedia.org/wiki/Primary_energy</a>
+        </li>
+        <li>
+          Biomass: <a href="https://www.eia.gov/energyexplained/?page=biomass_home">https://www.eia.gov/energyexplained/?page=biomass_home</a>
+        </li>
 
+        <li>
+          Secondary Energy: <a href="https://userwikis.fu-berlin.de/display/energywiki/secondary+energy">https://userwikis.fu-berlin.de/display/energywiki/secondary+energy</a>
+        </li>
+      </ul>
+    </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
     <!--<script src="https://d3js.org/d3.v3.min.js"></script>-->
     <!--<script src="https://dimplejs.org/dist/dimple.v1.1.3.min.js"></script>-->
     <script src="js/lib/d3.v3.min.js"></script>
